@@ -38,15 +38,6 @@
             android:theme="@android:style/Theme.Dialog"
             android:label="@string/AboutActivity.Title" />
             
-        <service
-            android:name=".utils.AsyncDownloaderService"
-            android:exported="true">
-            <intent-filter>
-                <action
-                    android:name="" />
-            </intent-filter>
-        </service>
-            
     </application>
 
     <uses-sdk
